Added something on segmentations for different Ks

--- a/Code/Tests/Movement_weight.ipynb
+++ b/Code/Tests/Movement_weight.ipynb
@@ -238,6 +238,79 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Compute the segmentations for different $K$s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def compute_moved_systems(stages):\n",
+    "    #set the dims\n",
+    "    d_in = mat_mobilenet.shape[1]\n",
+    "    boundaries = d_in/stages*np.arange(stages+1)\n",
+    "    boundaries = np.round(boundaries).astype(int)\n",
+    "    dims_in = boundaries[1:]-boundaries[:-1]\n",
+    "\n",
+    "    d_out = mat_mobilenet.shape[0]\n",
+    "    boundaries = d_out/stages*np.arange(stages+1)\n",
+    "    boundaries = np.round(boundaries).astype(int)\n",
+    "    dims_out = boundaries[1:]-boundaries[:-1]\n",
+    "\n",
+    "    assert sum(dims_in)==d_in and sum(dims_out)==d_out\n",
+    "\n",
+    "    system = identify(mat_mobilenet, dims_in,dims_out,epsilon=2e-8)\n",
+    "    sys_move,input_dims,output_dims,fs,sigmas = move.move(system,None,cost_computation,m_in=m_in,m_out=m_out,cost_global=True,\n",
+    "                                               return_sigmas=True,print_progress=False)\n",
+    "    \n",
+    "    approx = Approximation(sys_move,sigmas)\n",
+    "    system = approx.get_approxiamtion(eps)\n",
+    "    return (approx,system)\n",
+    "\n",
+    "approxs = []\n",
+    "systems = []\n",
+    "Ks = [5,10,17]\n",
+    "for K in Ks:\n",
+    "    print(\"Stages:\",K)\n",
+    "    ap,sy = compute_moved_systems(K)\n",
+    "    approxs.append(ap)\n",
+    "    systems.append(sy)\n",
+    "\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "w = setup_plots.textwidth\n",
+    "#plt.figure(figsize = [w,w*3/4])\n",
+    "fig, axes = plt.subplots(ncols=3 , figsize = [w,w/2.5],gridspec_kw={\"left\":0.02,\"right\":0.98,\"bottom\":0.1,\"top\":0.9})\n",
+    "\n",
+    "for i in range(len(Ks)):\n",
+    "    ax=axes[i]\n",
+    "    utils.show_system(systems[i],ax=ax)\n",
+    "    \n",
+    "\n",
+    "    ax.set_xticks(np.cumsum(systems[i].dims_in[:-1])-0.5)\n",
+    "    ax.set_yticks(np.cumsum(systems[i].dims_out)-0.5)\n",
+    "    ax.set_xticklabels([' '])\n",
+    "    ax.set_yticklabels([' '])\n",
+    "    \n",
+    "    print(\"K=\",Ks[i])\n",
+    "    print(\"  cost=\",systems[i].cost())\n",
+    "\n",
+    "plt.savefig(\"Mobilenet_diff_K.pdf\",bbox=\"tight\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Compute the cost vs error"
    ]
   },
