--- a/Code/NuclearNormOptim/Split.ipynb
+++ b/Code/NuclearNormOptim/Split.ipynb
@@ -90,6 +90,7 @@
     "import matplotlib.pyplot as plt\n",
     "from tvsclib.stage import Stage\n",
     "from tvsclib.strict_system import StrictSystem\n",
+    "from tvsclib.mixed_system import MixedSystem\n",
     "import tvsclib.utils as utils\n",
     "import tvsclib.math as math"
    ]
@@ -120,10 +121,40 @@
     "    \n",
     "    return stage_alpha,stage_beta\n",
     "    \n",
+    "def split_stage_anti(stage,i_in,i_out,D):\n",
+    "    A=stage.A_matrix\n",
+    "    B=stage.B_matrix\n",
+    "    C=stage.C_matrix\n",
+    "    #D=stage.D_matrix\n",
+    "    (d_stateo,d_statei)=A.shape\n",
+    "    U,s,Vt = np.linalg.svd(np.block([[C[:i_out,:],D[:i_out,i_in:]],[A,B[:,i_in:]]]),full_matrices=False)\n",
+    "    \n",
+    "    s_sqrt = np.sqrt(s)\n",
+    "    stage_alpha=Stage(s_sqrt.reshape(-1,1)*Vt[:,:d_statei],\\\n",
+    "                 s_sqrt.reshape(-1,1)*Vt[:,d_statei:],\\\n",
+    "                 C[i_out:,:],\\\n",
+    "                 np.zeros_like(D[:i_out,:i_in]))\n",
+    "    stage_beta=Stage(U[U.shape[0]-d_stateo:,:]*s_sqrt.reshape(1,-1),\\\n",
+    "               B[:,:i_in],\\\n",
+    "               U[:U.shape[0]-d_stateo,:]*s_sqrt.reshape(1,-1),\\\n",
+    "               np.zeros_like(D[i_out:,i_in:]))\n",
+    "    \n",
+    "    return stage_alpha,stage_beta\n",
+    "    \n",
     "def split(system,k,i_in,i_out):\n",
     "    stage_alpha,stage_beta = split_stage(system.stages[k],i_in,i_out)\n",
     "    system.stages[k]=stage_alpha\n",
-    "    system.stages.insert(k+1,stage_beta)"
+    "    system.stages.insert(k+1,stage_beta)\n",
+    "    \n",
+    "def split_anti(system,k,i_in,i_out,D):\n",
+    "    stage_alpha,stage_beta = split_stage_anti(system.stages[k],i_in,i_out,D)\n",
+    "    system.stages[k]=stage_beta\n",
+    "    system.stages.insert(k+1,stage_alpha)\n",
+    "    \n",
+    "def split_mixed(system,k,i_in,i_out):\n",
+    "    split_anti(system.anticausal_system,k,i_in,i_out,system.causal_system.stages[k].D_matrix)\n",
+    "    split(system.causal_system,k,i_in,i_out)\n",
+    "    "
    ]
   },
   {
@@ -140,7 +171,20 @@
     "    \n",
     "    \"\"\"\n",
     "    \n",
-    "    return StrictSystem(stages=[Stage(np.zeros((0,0)),np.zeros((0,T.shape[1])),np.zeros((T.shape[0],0)),T)],causal=True)"
+    "    return StrictSystem(stages=[Stage(np.zeros((0,0)),np.zeros((0,T.shape[1])),np.zeros((T.shape[0],0)),T)],causal=True)\n",
+    "\n",
+    "def initial_mixed(T):\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    returns a tupel with the initial lists\n",
+    "    for As,Bs,Cs,Ds\n",
+    "    \n",
+    "    \"\"\"\n",
+    "    \n",
+    "    return MixedSystem(\\\n",
+    "            causal_system=StrictSystem(stages=[Stage(np.zeros((0,0)),np.zeros((0,T.shape[1])),np.zeros((T.shape[0],0)),T)],causal=True),\\\n",
+    "        anticausal_system=StrictSystem(stages=[Stage(np.zeros((0,0)),np.zeros((0,T.shape[1])),np.zeros((T.shape[0],0)),np.zeros_like(T))],causal=False)\\\n",
+    "                      )"
    ]
   },
   {
@@ -158,7 +202,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "system = initial(T)\n",
+    "system = initial_mixed(T)\n",
+    "utils.show_system(system,mark_D=False)\n",
+    "utils.check_dims(system)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "system.anticausal_system.stages[0].A_matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "split_mixed(system,0,8,8)\n",
     "utils.show_system(system,mark_D=False)"
    ]
   },
@@ -168,7 +232,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "split(system,0,8,8)\n",
+    "system.anticausal_system.stages[1].B_matrix.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "split_mixed(system,0,4,4)\n",
     "utils.show_system(system,mark_D=False)"
    ]
   },
@@ -178,7 +251,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "split(system,0,4,4)\n",
+    "split_mixed(system,2,4,4)\n",
     "utils.show_system(system,mark_D=False)"
    ]
   },
@@ -188,8 +261,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "split(system,2,4,4)\n",
-    "utils.show_system(system,mark_D=False)"
+    "np.max(np.abs(T-system.to_matrix()))"
    ]
   },
   {
@@ -299,11 +371,45 @@
     "               D[i_out:,i_in:])\n",
     "    \n",
     "    return stage_alpha,stage_beta\n",
+    "\n",
+    "def split_stage_sigmas_anti(stage,i_in,i_out,D):\n",
+    "    #we need thsi stage such that previous is input normal and later is output normal\n",
+    "    s_in = stage.A_matrix.s_in\n",
+    "    s_out= stage.A_matrix.s_out\n",
+    "    A=stage.A_matrix.output_input_normal\n",
+    "    B=stage.B_matrix.output_normal\n",
+    "    C=stage.C_matrix.input_normal\n",
+    "    #D=stage.D_matrix\n",
+    "\n",
+    "    (d_stateo,d_statei)=A.shape\n",
+    "    U,s,Vt = np.linalg.svd(np.block([[C[:i_out,:],D[:i_out,i_in:]],[A,B[:,i_in:]]]),full_matrices=False)\n",
     "    \n",
+    "\n",
+    "    stage_alpha=Stage(\n",
+    "                 A_matrix(s,Vt[:,:d_statei]/s_in.reshape(1,-1),s_in),\\\n",
+    "                 B_matrix(s,Vt[:,d_statei:]),\\\n",
+    "                 C_matrix(stage.C_matrix.C[i_out:,:],s_in),\\\n",
+    "                 np.zeros_like(D[:i_out,:i_in]))\n",
+    "    stage_beta=Stage(\n",
+    "               A_matrix(s_out,U[U.shape[0]-d_stateo:,:]/s_out.reshape(-1,1),s),\\\n",
+    "               B_matrix(s_out,stage.B_matrix.B[:,:i_in]),\\\n",
+    "               C_matrix(U[:U.shape[0]-d_stateo,:],s),\\\n",
+    "               np.zeros_like(D[i_out:,i_in:]))\n",
+    "    return stage_alpha,stage_beta\n",
+    "\n",
     "def split_sigmas(system,k,i_in,i_out):\n",
     "    stage_alpha,stage_beta = split_stage_sigmas(system.stages[k],i_in,i_out)\n",
     "    system.stages[k]=stage_alpha\n",
-    "    system.stages.insert(k+1,stage_beta)"
+    "    system.stages.insert(k+1,stage_beta)\n",
+    "    \n",
+    "def split_sigmas_anti(system,k,i_in,i_out,D):\n",
+    "    stage_alpha,stage_beta = split_stage_sigmas_anti(system.stages[k],i_in,i_out,D)\n",
+    "    system.stages[k]=stage_beta\n",
+    "    system.stages.insert(k+1,stage_alpha)\n",
+    "    \n",
+    "def split_sigmas_mixed(system,k,i_in,i_out):\n",
+    "    split_sigmas_anti(system.anticausal_system,k,i_in,i_out,system.causal_system.stages[k].D_matrix)\n",
+    "    split_sigmas(system.causal_system,k,i_in,i_out)"
    ]
   },
   {
@@ -325,6 +431,23 @@
     "                                      C_matrix(np.zeros((T.shape[0],0)),np.zeros(0)),\\\n",
     "                                      T)],causal=True)\n",
     "\n",
+    "def initial_sigmas_mixed(T):\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    returns a tupel with the initial lists\n",
+    "    for As,Bs,Cs,Ds\n",
+    "    \n",
+    "    \"\"\"\n",
+    "    return MixedSystem(\\\n",
+    "                causal_system=StrictSystem(stages=[Stage(A_matrix(np.zeros(0),np.zeros((0,0)),np.zeros(0)),\\\n",
+    "                                      B_matrix(np.zeros(0),np.zeros((0,T.shape[1]))),\\\n",
+    "                                      C_matrix(np.zeros((T.shape[0],0)),np.zeros(0)),\\\n",
+    "                                      T)],causal=True),\n",
+    "                anticausal_system=StrictSystem(stages=[Stage(A_matrix(np.zeros(0),np.zeros((0,0)),np.zeros(0)),\\\n",
+    "                                      B_matrix(np.zeros(0),np.zeros((0,T.shape[1]))),\\\n",
+    "                                      C_matrix(np.zeros((T.shape[0],0)),np.zeros(0)),\\\n",
+    "                                      np.zeros_like(T))],causal=False))\n",
+    "\n",
     "def get_system(system):\n",
     "    stages = []\n",
     "    for stage in system.stages:\n",
@@ -332,7 +455,11 @@
     "                            stage.B_matrix.input_normal,\\\n",
     "                            stage.C_matrix.input_normal,\\\n",
     "                            stage.D_matrix))\n",
-    "    return StrictSystem(stages=stages,causal=system.causal)\n"
+    "    return StrictSystem(stages=stages,causal=system.causal)\n",
+    "\n",
+    "def get_system_mixed(system):\n",
+    "    \n",
+    "    return MixedSystem(causal_system=get_system(system.causal_system),anticausal_system=get_system(system.anticausal_system))"
    ]
   },
   {
@@ -341,8 +468,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sys = initial_sigmas(T)\n",
-    "utils.show_system(get_system(sys),mark_D=False)"
+    "sys = initial_sigmas_mixed(T)\n",
+    "utils.show_system(get_system_mixed(sys),mark_D=False)"
    ]
   },
   {
@@ -351,8 +478,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "split_sigmas(sys,0,8,8)\n",
-    "utils.show_system(get_system(sys),mark_D=False)"
+    "split_sigmas_mixed(sys,0,8,8)\n",
+    "utils.show_system(get_system_mixed(sys),mark_D=False)"
    ]
   },
   {
@@ -361,8 +488,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "split_sigmas(sys,0,4,4)\n",
-    "utils.show_system(get_system(sys),mark_D=False)"
+    "split_sigmas_mixed(sys,0,4,4)\n",
+    "utils.show_system(get_system_mixed(sys),mark_D=False)"
    ]
   },
   {
@@ -371,8 +498,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "split_sigmas(sys,2,4,4)\n",
-    "utils.show_system(get_system(sys),mark_D=False)"
+    "split_sigmas_mixed(sys,2,4,4)\n",
+    "utils.show_system(get_system_mixed(sys),mark_D=False)"
    ]
   },
   {
@@ -381,9 +508,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "split_sigmas(sys,1,2,2)\n",
-    "split_sigmas(sys,3,2,2)\n",
-    "utils.show_system(get_system(sys),mark_D=False)"
+    "split_sigmas_mixed(sys,1,2,2)\n",
+    "split_sigmas_mixed(sys,3,2,2)\n",
+    "utils.show_system(get_system_mixed(sys),mark_D=False)"
    ]
   },
   {
@@ -392,7 +519,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.max(np.tril(get_system(sys).to_matrix())-np.tril(T))\n"
+    "#np.max(np.abs(np.tril(get_system(sys).to_matrix())-np.tril(T)))\n",
+    "np.max(np.abs(get_system_mixed(sys).to_matrix()-T))\n"
    ]
   },
   {
@@ -401,7 +529,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "math.extract_sigmas(T,get_system(sys).dims_in,get_system(sys).dims_out)[0]"
+    "math.extract_sigmas(T,get_system_mixed(sys).dims_in,get_system_mixed(sys).dims_out)"
    ]
   },
   {
@@ -410,7 +538,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "[stage.A_matrix.s_in for stage in sys.stages][1:]"
+    "[stage.A_matrix.s_in for stage in sys.causal_system.stages][1:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "[stage.A_matrix.s_in for stage in sys.anticausal_system.stages][:-1]"
    ]
   },
   {
