Some cleanup in the folder structure
Added a folder "Split" for work on splitting identification
Added a folder "Others" for older ideas
Moved some files regarding nuclear norm optimization in seperate folder

--- a/Code/NuclearNormOptim/Spectral_clustering.ipynb
+++ b/Code/NuclearNormOptim/Spectral_clustering.ipynb
@@ -10,6 +10,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Split the collumns\n",
+    "\n",
+    "First we split the matrix.\n",
+    "For thsi we want to group them in in two clusters of collums that are idealy orhtogonal to each other.\n",
+    "For this we consider a graph where the collums $c_i$ are represented by nodes.\n",
+    "The edges have the weight\n",
+    "$$ e_{i,j} = |c_i^\\top c_j|$$\n",
+    "\n",
+    "For this we split the graph using spectral clustering https://en.wikipedia.org/wiki/Spectral_clustering "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
