--- a/Code/NuclearNormOptim/TestCVXOP.ipynb
+++ b/Code/NuclearNormOptim/TestCVXOP.ipynb
@@ -171,7 +171,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "N = 3\n",
+    "N = 5\n",
     "\n",
     "\n",
     "M_1 = np.random.rand(N,2*N)\n",
@@ -188,8 +188,8 @@
     "Q = scipy.stats.ortho_group.rvs(2*N)\n",
     "A = Q[:,k]+1e-3*np.random.rand(2*N,4*N)\n",
     "\n",
-    "M_1 = A[:N,:]\n",
-    "M_2 = A[N:,:]"
+    "#M_1 = A[:N,:]\n",
+    "#M_2 = A[N:,:]"
    ]
   },
   {
@@ -204,6 +204,7 @@
     "n_row2 = M_2.shape[0]\n",
     "n_row = n_row1+n_row2\n",
     "\n",
+    "s = 1e4 #try some rescale factor\n",
     "\n",
     "\"\"\"\n",
     "construct A: \n",
@@ -223,7 +224,7 @@
     "\n",
     "if n_row>=n_col*2:#n>=q:\n",
     "    for i in range(n_col):\n",
-    "        B = cvxopt.matrix(block_diag(0*M_1,M_2))\n",
+    "        B = cvxopt.matrix(block_diag(0*M_1,s*M_2))\n",
     "        offset = n_row*i #elemets of the previous columns\n",
     "        #set i-th collumn of M1. place it in i-th column of A\n",
     "        A[offset:offset+n_row1,i]=M_1[:,i]\n",
@@ -232,7 +233,7 @@
     "        A[offset+n_row1:offset+n_row,i]=-M_2[:,i]\n",
     "else:\n",
     "    for i in range(n_col):\n",
-    "        B = cvxopt.matrix(block_diag(0*M_1.T,M_2.T))\n",
+    "        B = cvxopt.matrix(block_diag(0*M_1.T,s*M_2.T))\n",
     "        #set i-th collumn of M1. place it in i-th column of A\n",
     "        A[i:n_col*2*n_row1:n_col*2,i]=M_1[:,i]\n",
     "\n",
@@ -241,10 +242,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "raw",
    "metadata": {},
-   "outputs": [],
    "source": [
     "#short test\n",
     "if n_row>=n_col*2:\n",
@@ -296,7 +295,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "h = np.hstack([np.zeros(n_col),np.ones(n_col)])\n",
+    "h = np.hstack([np.zeros(n_col),s*np.ones(n_col)])\n",
     "I = cvxopt.spmatrix(1.0, range(n_col), range(n_col))\n",
     "G = cvxopt.sparse([-I,I])\n",
     "#print(G)"
