Some experiments on AlexNet weight matrix
in move added an exception to deal with errors, as I had problems with not converging svds

--- a/Code/Tests/Movement_weight.ipynb
+++ b/Code/Tests/Movement_weight.ipynb
@@ -111,10 +111,11 @@
     "    ax.set_xlim(x_lim)\n",
     "\n",
     "    offset = 0.1\n",
-    "    pos_x = ax_dimsout.get_position().xmin+0.075+offset/fig.get_figwidth()\n",
-    "    pos_y = ax_dimsin.get_position().ymax-offset/fig.get_figheight()\n",
-    "    plt.figtext(pos_x,pos_y,'Iteration',rotation=-45,\\\n",
-    "                             horizontalalignment='left', verticalalignment='center',rotation_mode='anchor')\n",
+    "\n",
+    "\n",
+    "    ax.text(0,0,r'Iteration$\\qquad\\quad$.',rotation=-45,\\\n",
+    "                             horizontalalignment='right', verticalalignment='center',rotation_mode='anchor')\n",
+    "\n",
     "    \n",
     "    axf.plot(fs)\n",
     "    axf.grid()\n",
@@ -407,6 +408,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"Cost original=\",cost_orig[i])\n",
+    "print(\"Cost move=\",cost_move[i])\n",
+    "print(\"Cost move/Cost orig=\",cost_move[i]/cost_orig[i])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"Original errror=\",err_orig[i])\n",
+    "print(\"New errror     =\",err_move[i])"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -474,10 +496,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "raw",
    "metadata": {},
-   "outputs": [],
    "source": [
     "stages = 15\n",
     "\n",
@@ -526,16 +546,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "raw",
    "metadata": {},
-   "outputs": [],
    "source": [
     "print(\"Time start: \",time.time())\n",
     "#eps_max = np.linalg.svd(mat_mobilenet[int(np.floor(mat_mobilenet.shape[0]/2)):,:int(np.floor(mat_mobilenet.shape[1]/2))],compute_uv=False)[0]\n",
     "\n",
-    "m_in=np.ceil(9*30/1.5**np.arange(10)).astype(int)\n",
-    "m_out=np.ceil(4*30/1.5**np.arange(10)).astype(int)\n",
+    "m_in=np.ceil(9*30/1.4**np.arange(10)).astype(int)\n",
+    "m_out=np.ceil(4*30/1.4**np.arange(10)).astype(int)\n",
     "\n",
     "print(\"l=\")\n",
     "display(m_out)\n",
@@ -547,6 +565,26 @@
     "\n",
     "utils.save_system(sys_move,'AlexNet/system_moved.npz',sigmas=sigmas_move)\n",
     "print(\"Time end: \",time.time())"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "np.savez('AlexNet/data_move.npz',input_dims=input_dims,output_dims=output_dims,fs=fs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data =np.load('AlexNet/data_move.npz')\n",
+    "input_dims = data[\"input_dims\"]\n",
+    "output_dims=data[\"output_dims\"]\n",
+    "fs = data[\"fs\"]\n",
+    "sys_move,sigmas_move = utils.load_system('AlexNet/system_moved.npz',load_sigmas=True)"
    ]
   },
   {
@@ -563,10 +601,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "raw",
    "metadata": {},
-   "outputs": [],
    "source": [
     "dims_in_new =sys_move.dims_in\n",
     "dims_out_new =sys_move.dims_out\n",
@@ -586,6 +622,7 @@
    "outputs": [],
    "source": [
     "approx =Approximation(system,sigmas)\n",
+    "approx_move=Approximation(sys_move,sigmas_move)\n",
     "approx_new =Approximation(system_new,sigmas_new)\n",
     "\n",
     "N = 9 #number of points\n",
@@ -606,7 +643,16 @@
     "    return err,costs\n",
     "\n",
     "err_orig,cost_orig = calc_values(approx,eps)\n",
-    "err_move,cost_move = calc_values(approx_new,eps)"
+    "err_move,cost_move = calc_values(approx_move,eps)\n",
+    "err_new,cost_new = calc_values(approx_new,eps)"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "np.savez('AlexNet/data_error.npz',err_orig=err_orig,cost_orig=cost_orig,err_move=err_move,\\\n",
+    "        cost_move=cost_move,err_new=err_new,cost_new=cost_new)"
    ]
   },
   {
@@ -619,6 +665,7 @@
     "fig, ax = plt.subplots(figsize=(w, 2/3*w))\n",
     "plt.plot(cost_orig,err_orig,'1-',label='initial segmentation')\n",
     "plt.plot(cost_move,err_move,'2--',label='adapted segmentation')\n",
+    "plt.plot(cost_new,err_new,'3:',label='reidentified system')\n",
     "ylims = ax.get_ylim()\n",
     "plt.vlines(mat_AlexNet.size,ylims[0],ylims[1],colors='0.4')\n",
     "ax.set_ylim(ylims)\n",
@@ -632,23 +679,24 @@
     "plt.xlabel(\"Number of multiplications\")\n",
     "plt.ylabel(r'$\\| A-\\tilde{A} \\| $')\n",
     "\n",
-    "zoom_h = 1\n",
-    "zoom_w = 6e6\n",
-    "s = 5.2\n",
-    "axins = ax.inset_axes([0.45, 0.2,s*zoom_w/9e7,s*zoom_h/10])\n",
+    "zoom_h = 0.3\n",
+    "zoom_w = 8e6\n",
+    "s = 7\n",
+    "axins = ax.inset_axes([0.45, 0.2,s*zoom_w/1.3e8/1.5,s*zoom_h/5])\n",
     "\n",
     "axins.grid()\n",
     "axins.plot(cost_orig,err_orig,'1-')\n",
     "axins.plot(cost_move,err_move,'2--')\n",
+    "axins.plot(cost_new,err_new,'3:')\n",
     "\n",
-    "axins.set_xlim(cost_orig[i]-0.5*zoom_w, cost_orig[i]+0.5*zoom_w)\n",
-    "axins.set_ylim(err_orig[i]-0.5*zoom_h, err_orig[i]+0.5*zoom_h)\n",
+    "axins.set_xlim(cost_orig[i]-0.5*zoom_w, cost_move[i]+0.5*zoom_w)\n",
+    "axins.set_ylim(err_orig[i]-0.5*zoom_h, err_move[i]+0.5*zoom_h)\n",
     "axins.set_xticklabels([])\n",
     "axins.set_yticklabels([])\n",
     "\n",
     "ax.indicate_inset_zoom(axins, edgecolor=\"black\")\n",
-    "axins.text(cost_orig[i]-0.2*zoom_w,err_orig[i]+0.3*zoom_h, r'$\\epsilon = \\frac{1}{4} \\|A\\|_H$',)\n",
-    "#plt.savefig(\"move_example_mobilenet_error.pdf\",bbox=\"tight\",bbox_inches = 'tight')\n",
+    "axins.text(cost_move[i]-0.05*zoom_w,err_move[i]+0.2*zoom_h, r'$\\epsilon = \\frac{1}{4} \\|A\\|_H$',)\n",
+    "plt.savefig(\"move_example_alexnet_error.pdf\",bbox=\"tight\",bbox_inches = 'tight')\n",
     "bbox = plt.gcf().get_tightbbox( plt.gcf().canvas.get_renderer()) \n",
     "print(bbox.width/setup_plots.textwidth)"
    ]
@@ -678,6 +726,26 @@
    "outputs": [],
    "source": [
     "eps_max*0.1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "i"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"Cost original=\",cost_orig[i])\n",
+    "print(\"Cost new=\",cost_new[i])\n",
+    "print(\"Cost new/Cost orig=\",cost_new[i]/cost_orig[i])"
    ]
   },
   {
