Some corrections in thesis

--- a/Thesis/thesis.bib
+++ b/Thesis/thesis.bib
@@ -57,7 +57,6 @@
 	title = {Adaptive Geometrically Balanced Clustering of H-Matrices},
 	volume = {73},
 	issn = {1436-5057},
-	url = {https://doi.org/10.1007/s00607-004-0068-0},
 	doi = {10.1007/s00607-004-0068-0},
 	abstract = {In [8], a class of (data-sparse) hierarchical (-) matrices is introduced that can be used to efficiently assemble and store stiffness matrices arising in boundary element applications. In this paper, we develop and analyse modifications in the construction of an -matrix that will allow an efficient application to problems involving adaptive mesh refinement. In particular, we present a new clustering algorithm such that, when an -matrix has to be updated due to some adaptive grid refinement, the majority of the previously assembled matrix entries can be kept whereas only a few new entries resulting from the refinement have to be computed. We provide an efficient implementation of the necessary updates and prove for the resulting -matrix that the storage requirements as well as the complexity of the matrix-vector multiplication are almost linear, i.e.,},
 	pages = {1--23},
@@ -65,7 +64,6 @@
 	journaltitle = {Computing},
 	shortjournal = {Computing},
 	author = {Grasedyck, L. and Hackbusch, W. and Borne, S. Le},
-	urldate = {2022-05-16},
 	date = {2004-07-01},
 	langid = {english},
 	keywords = {adaptive mesh refinement, boundary elements, data-sparse approximation, Hierarchical matrices},
@@ -545,6 +543,20 @@ title = {MobileNetV2: Inverted Residuals and Linear Bottlenecks},
 booktitle = {Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition (CVPR)},
 date = {2019-03-21}
 } 
+
+@report{krizhevsky_one_2014,
+	title = {One weird trick for parallelizing convolutional neural networks},
+	abstract = {I present a new way to parallelize the training of convolutional neural networks across multiple {GPUs}. The method scales significantly better than all alternatives when applied to modern convolutional neural networks.},
+	number = {{arXiv}:1404.5997},
+	institution = {{arXiv}},
+	author = {Krizhevsky, Alex},
+	date = {2014-04-26},
+	doi = {10.48550/arXiv.1404.5997},
+	eprinttype = {arxiv},
+	eprint = {1404.5997 [cs]},
+	note = {type: article},
+	keywords = {Computer Science - Distributed, Parallel, and Cluster Computing, Computer Science - Machine Learning, Computer Science - Neural and Evolutionary Computing},
+}
 %=====================================================================================================================
 %Others
 %=====================================================================================================================
